# market-data-fabric

./: .gitignore  CMakeLists.txt  README.md
apps/: README.md
apps/gateway/: README.md
apps/gateway/src/: binance_live_options.cpp  binance_live_options.hpp  binance_live_runner.cpp  binance_live_runner.hpp  binance_mapper_handlers.cpp  binance_mapper_handlers.hpp  cli_options.hpp  main.cpp
apps/md-node/: README.md
apps/md-node/src/: binance_live_options.cpp  binance_live_options.hpp  binance_live_runner.cpp  binance_mapper_handlers.cpp  binance_mapper_handlers.hpp  cli_options.hpp  main.cpp
cmake/: Dependencies.cmake  MdfCodegen.cmake
configs/: README.md
configs/dev/: binance_spot_raw.yaml  low_latency_profile.yaml  mock.yaml
configs/refdata/: instruments.yaml
docs/: adapter-field-mapping.md  architecture.md  binance-spot-raw-mvp.md  cn-stock-book-rebuild.md  codegen.md  data-modes.md  deployment.md  hft-readiness.md  lv3-market-data.md  mapper-field-mapping.md  raw-capture.md
docs/components/: README.md  adapters.md  client.md  cluster.md  codecs.md  feed.md  providers.md  reference.md  replay.md  runtime.md  service.md  transport.md
docs/providers/cn/futures/: README.md
docs/providers/cn/futures/ctp/: README.md
docs/providers/cn/stock/: README.md
docs/providers/cn/stock/tonglian/: README.md
docs/providers/cn/stock/tora/: README.md
docs/providers/cn/stock/xtp/: README.md
docs/providers/cn/stock/xtppro/: README.md
docs/providers/crypto/: README.md
docs/providers/crypto/binance/: README.md
docs/providers/us/stock/: README.md
docs/providers/us/stock/ib/: README.md
include/marketdata/adapters/: event_header.hpp  map_outcome.hpp  mapping.hpp
include/marketdata/adapters/binance/: book_ticker_mapper.hpp  endpoints.hpp  feed_keys.hpp  feeds.hpp  mapping_context.hpp  trade_mapper.hpp  types.hpp  websocket_feed_client.hpp
include/marketdata/adapters/binance/detail/: json_value_reader.hpp
include/marketdata/adapters/crypto/binance/: book_ticker_mapper.hpp  endpoints.hpp  feed_keys.hpp  feeds.hpp  mapping_context.hpp  symbols.hpp  trade_mapper.hpp  websocket_feed_client.hpp
include/marketdata/adapters/tonglian/: mapper.hpp
include/marketdata/client/: client.hpp
include/marketdata/codecs/: fixed_point.hpp
include/marketdata/feed/: feed.hpp  message.hpp
include/marketdata/mappers/: event_header.hpp  map_outcome.hpp  mapping.hpp  sequence_gate.hpp
include/marketdata/markets/: trading_phase_tracker.hpp
include/marketdata/markets/cn/: types.hpp
include/marketdata/markets/cn/sse/: mapper.hpp
include/marketdata/markets/cn/szse/: mapper.hpp
include/marketdata/net/: websocket.hpp
include/marketdata/net/beast/: websocket_client.hpp
include/marketdata/providers/crypto/binance/: book_ticker_mapper.hpp  endpoints.hpp  feed_keys.hpp  feeds.hpp  mapping_context.hpp  symbols.hpp  trade_mapper.hpp  types.hpp  websocket_feed_client.hpp
include/marketdata/replay/: checkpoint.hpp  event_journal.hpp  message_log.hpp
include/marketdata/runtime/: affinity.hpp  memory.hpp
include/marketdata/service/: feed_message_handler.hpp  feed_payload_log_handler.hpp  feed_session.hpp  mapper_stats.hpp
include/marketdata/venues/: trading_phase_tracker.hpp
include/marketdata/venues/cn/: types.hpp
include/marketdata/venues/cn/sse/: normalizer.hpp
include/marketdata/venues/cn/szse/: normalizer.hpp
libs/: README.md
libs/md-adapters/: README.md
libs/md-adapters/cn_equity/: README.md
libs/md-adapters/cn_equity/common/schema/: l3_execution.mapping.yaml
libs/md-adapters/cn_equity/example_l3_provider/: README.md
libs/md-adapters/cn_equity/example_l3_provider/mapping/: order_event.yaml
libs/md-adapters/cn_futures/ctp/: README.md
libs/md-adapters/cn_futures/ctp/schema/: depth_market_data.mapping.yaml
libs/md-adapters/cn_futures/example_l3_provider/: README.md
libs/md-adapters/cn_futures/example_l3_provider/mapping/: execution.yaml  order_event.yaml
libs/md-adapters/common/: README.md
libs/md-adapters/crypto/: README.md
libs/md-adapters/crypto/binance/: README.md
libs/md-adapters/crypto/binance/mapping/: depth_update.yaml
libs/md-adapters/crypto/example_l3_provider/: README.md
libs/md-adapters/crypto/example_l3_provider/mapping/: execution.yaml  order_event.yaml
libs/md-adapters/us_equity/: README.md
libs/md-adapters/us_equity/common/schema/: l3_order_event.mapping.yaml
libs/md-adapters/us_equity/example_itch_provider/: README.md
libs/md-adapters/us_equity/ib/: README.md
libs/md-book/: README.md
libs/md-book/include/md/book/: book_model.hpp  mbo_book.hpp
libs/md-client/: README.md
libs/md-cluster/: README.md
libs/md-codecs/: README.md
libs/md-core/: README.md
libs/md-refdata/: README.md
libs/md-replay/: README.md
libs/md-runtime/: README.md
libs/md-service/: README.md
libs/md-transport/: README.md
schemas/md/v1/: README.md
scripts/: README.md
tests/: README.md  binance_feeds_smoke.cpp  binance_spot_streams_smoke.cpp  core_events_smoke.cpp  feed_session_smoke.cpp  message_log_smoke.cpp  raw_file_smoke.cpp  spsc_ring_smoke.cpp  websocket_endpoint_smoke.cpp
tests/adapters/binance/: binance_book_ticker_mapper_smoke.cpp  binance_feeds_smoke.cpp  binance_trade_mapper_smoke.cpp
tests/adapters/crypto/binance/: binance_book_ticker_mapper_smoke.cpp  binance_feeds_smoke.cpp  binance_trade_mapper_smoke.cpp
tests/markets/: trading_phase_tracker_smoke.cpp
tests/net/: websocket_endpoint_smoke.cpp
tests/providers/crypto/binance/: binance_book_ticker_mapper_smoke.cpp  binance_feeds_smoke.cpp  binance_trade_mapper_smoke.cpp
tests/replay/: checkpoint_smoke.cpp  event_journal_smoke.cpp  message_log_smoke.cpp
tests/runtime/: spsc_ring_smoke.cpp
tests/service/: feed_session_smoke.cpp
tests/venues/: trading_phase_tracker_smoke.cpp
tools/bench-tonglian-mapper/: main.cpp
tools/book-validate/: README.md  book_validate.cpp  book_validate.hpp  main.cpp  parquet_rows.py
tools/codegen/: README.md
tools/event-trace/: main.cpp
tools/md-codegen/: README.md
tools/md-codegen/templates/: README.md
(+49 files in other folders)
